src/pages/home/HomeP.module.scss
// Home Banner Styles (start)
#home_banner {
  padding-top: 180px;
  background-color: black;
  @media (max-width: 444px) {
    padding-top: 160px;
    padding-bottom: 60px;
  }
}

.home_banner {
  display: grid;
  grid-template-columns: 1fr 1fr;
  align-items: center;
  color: #f5f5f5;
  &_info {
    padding: 58px 64px;
    padding-right: 0;
    &_logo {
      display: flex;
      align-items: center;
      column-gap: 24px;
      margin-bottom: 20px;
      p {
        font-size: 16px;
        color: #f5f5f5;
      }
    }
    h1 {
      font-size: 36px;
      font-weight: 600;
      line-height: 40px;
      letter-spacing: 1.92px;
      margin-bottom: 22px;
      @media (max-width: 992px) {
        font-size: 24px;
        line-height: 30px;
      }
      @media (max-width: 467px) {
        font-size: 16px;
        line-height: 20px;
      }
    }
    & > p {
      display: inline-block;
      padding-bottom: 4px;
      border-bottom: 1px solid #f5f5f5;
      cursor: pointer;
    }
    @media (max-width: 824px) {
      padding: 24px 48px;
    }
    @media (max-width: 578px) {
      padding: 16px;
    }
  }
  &_img {
    padding-top: 16px;
    text-align: center;
    @media (max-width: 578px) {
      img {
        width: 100%;
      }
    }
  }
  @media (max-width: 824px) {
    grid-template-columns: 1fr;
    row-gap: 24px;
    justify-content: center;
  }
}

// Home Banner Styles (end)

// products on sale (start)
#fresh_products {
  padding-top: 150px;
  @media (max-width: 768px) {
    padding-top: 80px;
  }
}

.fresh_products {
  &_border_line {
    display: block;
    max-width: 1140px;
    height: 0.5px;
    margin: 0 auto;
    margin-top: 60px;
    padding: 0 20px;
    background-color: rgba(0, 0, 0, 0.3);
  }
}

.fresh_products__title {
  display: flex;
  align-items: center;
  column-gap: 16px;
  margin-bottom: 24px;
  div {
    width: 20px;
    height: 40px;
    border-radius: 6px;
    background-color: #db4444;
  }
  h5 {
    font-size: 16px;
    font-weight: 600;
    line-height: 20px;
    color: #db4444;
  }
  @media (max-width: 578px) {
    margin-bottom: 12px;
  }
}

.fresh_products__subtitle {
  display: flex;
  align-items: flex-end;
  column-gap: 90px;
  margin-bottom: 40px;
  h2 {
    font-size: 36px;
    font-weight: 600;
    line-height: 48px;
    letter-spacing: 1.44px;
  }
  @media (max-width: 850px) {
    flex-direction: column;
    align-items: flex-start;
    row-gap: 12px;
  }
  @media (max-width: 578px) {
    h2 {
      font-size: 24px;
    }
  }
}

.countdown-container {
  @media (max-width: 578px) {
    column-gap: 24px !important;
  }
}
.countdown-numbers {
  @media (max-width: 578px) {
    font-size: 24px !important;
  }
}

.products {
  position: relative;
  text-align: center;
  & > button {
    margin-top: 60px;
    padding: 16px 48px;
    border-radius: 4px;
    color: #fafafa;
    background-color: #db4444;
  }
  @media (max-width: 578px) {
    & > button {
      margin-top: 40px;
      padding: 12px 32px;
    }
  }
}

.nextArrow,
.prevArrow {
  position: absolute;
  display: flex;
  align-items: center;
  justify-content: center;
  top: -25%;
  padding: 14px;
  font-size: 20px;
  border-radius: 50%;
  background-color: #f5f5f5;
  @media (max-width: 576px) {
    display: none;
  }
}
.nextArrow {
  right: calc(50% - 570px);
  @media (max-width: 1150px) {
    right: 2%;
  }
}

.prevArrow {
  right: calc(50% - 500px);
  @media (max-width: 1150px) {
    right: 10%;
  }
  @media (max-width: 768px) {
    right: 12%;
  }
}

// products on sale (end)

// Categories (start)
#categories {
  padding-top: 80px;
}

.categories {
  padding-bottom: 60px;
  border-bottom: 1px solid rgba(0, 0, 0, 0.3);
  &__title {
    display: flex;
    align-items: center;
    column-gap: 16px;
    margin-bottom: 24px;
    div {
      width: 20px;
      height: 40px;
      border-radius: 6px;
      background-color: #db4444;
    }
    h5 {
      font-size: 16px;
      font-weight: 600;
      line-height: 20px;
      color: #db4444;
    }
    @media (max-width: 578px) {
      margin-bottom: 12px;
    }
  }
  &__subtitle {
    font-size: 36px;
    font-weight: 600;
    line-height: 48px;
    letter-spacing: 1.44px;
    margin-bottom: 60px;
    @media (max-width: 578px) {
      font-size: 24px;
      margin-bottom: 30px;
    }
  }
}

.nextArrowForCategories,
.prevArrowForCategories {
  position: absolute;
  display: flex;
  align-items: center;
  justify-content: center;
  top: -90%;
  padding: 14px;
  font-size: 20px;
  border-radius: 50%;
  background-color: #f5f5f5;
  @media (max-width: 576px) {
    display: none;
  }
}
.nextArrowForCategories {
  right: calc(50% - 570px);
  @media (max-width: 1150px) {
    right: 2%;
  }
}

.prevArrowForCategories {
  right: calc(50% - 500px);
  @media (max-width: 1150px) {
    right: 10%;
  }
  @media (max-width: 768px) {
    right: 12%;
  }
}

// Best selling products (start)
#best_selling {
  padding-top: 70px;
}
/* ... */

